[package]
authors = ["David Campbell <dcampbell24@gmail.com>",
           "Denilson M. Amorim <dma_2012@hotmail.com>",
           "Carsten Blüggel <bluecars@posteo.eu>"]
build = "build.rs"
description = "Raw IUP bindings for Rust"
homepage = "https://github.com/dcampbell24/rust-iup-sys"
keywords = ["bindings", "gui", "iup"]
license = "MIT"
links = "iup"
name = "iup-sys"
repository = "https://github.com/dcampbell24/rust-iup-sys"
version = "0.0.4"

[lib]
name = "iup_sys"

[build-dependencies]
libloading = "0.6"
